# y42_stepper

./: .gitignore  README.md  bug_hunt_dual.py  dual_fw_control_test.py  dual_motor_sync_test.py  full_test.py  pyproject.toml
docs/: README.md
y42_stepper/: __init__.py  configs.py  device.py  firmware.py  parameters.py  units.py
y42_stepper/commands/: __init__.py  base.py  homing.py  motion.py  multi.py  read.py  trigger.py  write.py
